No shortcuts shown in the Pose Assets context menu #103267

Closed
opened 2022-12-16 12:41:30 +01:00 by Dalai Felinto · 16 comments

Blender Version
Broken: version: 3.4.0
Worked: Never

Short description of error
The shortcuts to Apply Pose and Blend Pose are not shown in the Pose Asset context menu (Left Click and Left Click Drag).

This affects the discoverability of that way to access them more directly, specially for the Blend Pose.

Exact steps for others to reproduce the error
In the viewport open the context menu for any Asset Pose:

{F14062345, size=full}

**Blender Version** Broken: version: 3.4.0 Worked: Never **Short description of error** The shortcuts to Apply Pose and Blend Pose are not shown in the Pose Asset context menu (Left Click and Left Click Drag). This affects the discoverability of that way to access them more directly, specially for the Blend Pose. **Exact steps for others to reproduce the error** In the viewport open the context menu for any Asset Pose: {[F14062345](https://archive.blender.org/developer/F14062345/image.png), size=full}
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Author
Owner

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @ideasman42

Added subscriber: @ideasman42

What is the shortcut expected to be? I don't see a key-map entry and a shortcut isn't mentioned in the documentation.

This report mentions left click dragging but I don't see how this is accessed.

At a guess though, I noticed POSELIB_OT_blend_pose_asset_for_keymap & POSELIB_OT_blend_pose_asset. So it would make sense that the shortcut wouldn't show up if the the menu and the keymap use different operators.

What is the shortcut expected to be? I don't see a key-map entry and a shortcut isn't mentioned in the documentation. This report mentions left click dragging but I don't see how this is accessed. At a guess though, I noticed `POSELIB_OT_blend_pose_asset_for_keymap` & `POSELIB_OT_blend_pose_asset`. So it would make sense that the shortcut wouldn't show up if the the menu and the keymap use different operators.
Author
Owner

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren
Author
Owner

Hi Campbell.

The current shortcuts are:

  • Apply Pose: Mouse Click
  • Blend Pose: Mouse Drag
    * Apply Pose Flipped: Ctrl + Mouse Click

They are all calling the same operator, but with different parameters:
bpy.ops.poselib.apply_pose_asset()

Hi Campbell. The current shortcuts are: * Apply Pose: Mouse Click * Blend Pose: Mouse Drag ~~* Apply Pose Flipped: Ctrl + Mouse Click~~ They are all calling the same operator, but with different parameters: bpy.ops.poselib.apply_pose_asset()
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123

Hey Dalai, I still don't know what you mean, is this in the 3D viewport? or the asset space?

I can open the context menu in the asset-space on the pose and access the menu items - but clicking and dragging just drags the icon, Ctrl-Clicking too. Clicking outside the icon box selects.

Hey Dalai, I still don't know what you mean, is this in the 3D viewport? or the asset space? I can open the context menu in the asset-space on the pose and access the menu items - but clicking and dragging just drags the icon, Ctrl-Clicking too. Clicking outside the icon box selects.
Author
Owner

@ideasman42 I'm referring mainly to the context menu for the poses you see in the Pose Library panels in the 3D Viewport.

That said I just realized that the Apply Flipped Pose has no shortcut at the moment. But the Blend Pose and the Apply Pose have.

Note that indeed for the Asset Browser only the Apply Pose should show a shortcut. It is not possible to Blend Pose by dragging there.

For the records I use the Ellie Pose Library for the testing.

@ideasman42 I'm referring mainly to the context menu for the poses you see in the Pose Library panels in the 3D Viewport. That said I just realized that the Apply Flipped Pose has no shortcut at the moment. But the Blend Pose and the Apply Pose have. Note that indeed for the Asset Browser only the Apply Pose should show a shortcut. It is not possible to Blend Pose by dragging there. For the records I use the [Ellie Pose Library ](https://www.blender.org/download/demo/bundles/bundles-3.0/asset-demo-bundle-3.0-ellie-animation.zip) for the testing.

This issue was referenced by f88e788569

This issue was referenced by f88e78856945e7c916bb5fa191c5e403834487b6

This issue was referenced by 68c6fc6d38

This issue was referenced by 68c6fc6d385aa69dde36a9d46bdc4773b1cab621

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2023-01-11 09:28:55 +01:00
Author
Owner

Changed status from 'Resolved' to: 'Confirmed'

Changed status from 'Resolved' to: 'Confirmed'
Author
Owner

@ideasman42 fantastic.

@ideasman42 fantastic.
Author
Owner

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Author
Owner

Working like a charm in the viewport, thanks. For the asset browser it looks like the shortcut for Apply Pose is still missing though (it is double-click in that case).

Working like a charm in the viewport, thanks. For the asset browser it looks like the shortcut for Apply Pose is still missing though (it is double-click in that case).
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#103267
No description provided.