Fix T103267: No shortcuts shown in the Pose Assets context menu

Support displaying shortcuts for uiListDyn.custom_drag_* &
custom_activate_* operators.